Beta 3 (Released TBD):
Mane changes:
- The Railgun now recharges in the background. You will know when it's ready after a beep plays.
	- The Railgun will charge faster than normal if the Railgun is charging in the background. This does not apply if the Railgun is overcharged.
- It is now much easier to aim with the Railgun. The crosshair is now enabled and the beam points towards the crosshair.

Bug Fixes:
- Fixed a bug where the Railgun doesn't play a sound at 100% completion.
- Fixed a bug where unlocalized text in the Customization menu becomes jarbled.

Balance Tweaks:
- Decreased the Railgun's normal charge time by up to 31%.
- Decreased the Railgun's overcharge charge time by up to 33%.
- The Railgun now fires invisible bullets, allowing for better support with map triggers.

Misc. Changes:

Beta 2 (Released 03-07-21):
Mane changes:
- Added an additional boost when rocket/grenade jumping.
- Added proper bindings for the Gatling Gun and the Railgun.
- Added a timer for games with a time limit.
- Enabled most server movement variables. The server host can change most of these in the server settings.
- Increased sv_airaccelerate from 10 to 150. This allows for easier air control when bunnyhopping.
- Added a randomizer mode!
	- Server hosts can change what weapons players spawn with the weapons.txt in the scripts folder. Please note that this will also change the amount of weapons you can spawn with when you use impulse 101.
- Your Railgun beam's color will now change based on your primary player color.
- Reverted back to the original Half-Life 2 Deathmatch spawn algorithm, while retaining support for Counter-Strike Source and Day of Defeat Source spawnpoints.
- Added support for TF2 spawnpoints.
- Added a difficulty selector for bots.
- Added a keybind to quickly switch into spectator mode.
	- Default bind: v
- Added a proper download directory.

Bug Fixes:
- Fixed a bug where the Railgun doesn't display effects when hitting a player.