@@ -5,8 +5,8 @@
 		"weapon_railgun"
 		{
 			//Positions
-			"x" "2844.161865"
-			"y" "-1932.762451"
+			"x" "2481.273682"
+			"y" "-3334.229736"
 			"z" "-2595.968750"
 			//Rotations
 			"roll"  "0"  
