@@ -3,6 +3,7 @@ Mane changes:
 - The Railgun now recharges in the background. You will know when it's ready after a beep plays.
 	- The Railgun will charge faster than normal if the Railgun is charging in the background. This does not apply if the Railgun is overcharged.
 - It is now much easier to aim with the Railgun. The crosshair is now enabled and the beam points towards the crosshair.
+- Moved the positioning of the Railgun in dm_aerowalk.
 
 Bug Fixes:
 - Fixed a bug where the Railgun doesn't play a sound at 100% completion.
@@ -14,6 +15,7 @@ Balance Tweaks:
 - The Railgun now fires invisible bullets, allowing for better support with map triggers.
 
 Misc. Changes:
+- Changed the bot name randomization algorithm to be more unique.
 
 Beta 2 (Released 03-07-21):
 Mane changes:
